Fixed scrollbar

--- a/my-react-ts-app/src/App.css
+++ b/my-react-ts-app/src/App.css
@@ -11,7 +11,7 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #282c34;
 }
 
 /* Handle */
